# osc_music

./: .clang-format  CMakeLists.txt  README.md  meson.build
.cache/clangd/index/: lv2_interface.c.652620C47B6DDCAB.idx
lv2_mushroom/: CMakeLists.txt  manifest.ttl  meson.build  mushroom.ttl
lv2_mushroom/src/: counter.h  geometry.h  lv2_interface.c  lv2_interface.cpp  mushroom.c  mushroom.h  plugin_handle.cpp  plugin_handle.h  waveform.h
scripts/: mushroom
